ajout de la generation des htaccess